@@ -14,11 +14,11 @@ not run its Makefile.PL or Build.PL.
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA1
 
-SHA1 7b6ce107c2a821c8e62026b429418ba8a6649cc6 ChangeLog
+SHA1 9a2ec6c7e4d417ce5e787febfde3c3156d8a7839 ChangeLog
 SHA1 62647027745e394450492878f8d8730548d83fa2 LICENSE
 SHA1 2405b691fcb18b468ccb31cab97babb75e4d1f30 MANIFEST
-SHA1 b6e500c0d861ae49508046ae17d9db988f4854f0 META.yml
-SHA1 e05088e6b42b997c74baba3cff446e916cf5285f Makefile.PL
+SHA1 a44dad01a9c0987dd326a54cf31584cadd998cce META.yml
+SHA1 7e87f592f88ece950963c28801248dedbd356a0b Makefile.PL
 SHA1 05aead0f26b0f71a00bad5badbf390f2c92dcd1d README
 SHA1 ecb089134bba590f02aa974be5a6e86d72cdb0dc UNINSTALL_CYGWIN
 SHA1 ade875b98aca4971a381d2e037ed009b52c2f8da bin/fullauto.pl
@@ -47,7 +47,7 @@ SHA1 6fed559b971e9d2f091e0776ddbb131be5225a36 inc/Module/Install/Win32.pm
 SHA1 ea528c813c3473a2674fcbed06531c2f795116ce inc/Module/Install/WriteAll.pm
 SHA1 00bb8470354d11bd7c2c74633083ebe627eb2b7e inc/Module/Install/with.pm
 SHA1 e1d3650b6801a3cb2e6de38574e9327914c96d40 install_mozrepl_plugin.ahk
-SHA1 50f17c5e2e3482bf7e421350e18fdbe847b9b516 lib/Net/FullAuto.pm
+SHA1 67576aeb8d4281dadb7e0c7290d88eb5333cf0ba lib/Net/FullAuto.pm
 SHA1 cc3f8588c96516de2802c68be465447d17f781aa lib/Net/FullAuto/Custom/BackUp/README
 SHA1 5032ba28f88dbf163b0d4dd158948af9124568c9 lib/Net/FullAuto/Custom/README
 SHA1 5b1702f20efb104e3375934cf55a7438c19e109a lib/Net/FullAuto/Distro/fa_code.pm
@@ -64,11 +64,11 @@ SHA1 6fac6b17647d05b71441ac3783ceec38b9b71fa6 t/test.t
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v1
 
-iQEcBAEBAgAGBQJTwzNVAAoJEBa/9Pad787EpGwH/0S0SOxWcX4SV/XUhjIBQzAV
-cEveC5rq+LknZBAr6qJFHainJpfKDjhOYtS2ejq38F2we8cz1FHpuipKaqeT/tql
-7jNmC4qV+PTXiqM4TrfvDAkpDeqGM9mARFSoXZbuqxwLdbWurckoBvUnfHDGdRlS
-9cjkvNHbjLDi1bRw9WvWMUyJRCbqf9o8HrbNqklI8E6Dwe3fbsjV86ed2NVJa2Tk
-dcud4byRgCLqYlYvJzVOdTq9xhfBHsqF0QLyYvQzYbDVne2zxZpIYBF4e0Lmi5TB
-EFsKi23PNZCV+FxtgbXuCFVw0358rqzVXKfSVzSDBdI5tH6CzCHoCeZOPJh+u5c=
-=A9Xv
+iQEcBAEBAgAGBQJTwz52AAoJEBa/9Pad787EJqwIAMY4/B87d32TeFjP+H4DFS6H
+QpZSqIL3Xbk+6oUVIAVOPcKHOOZEeW5Qby/t5sIC/R92VagA3dna7LWpdK+VhRtC
+aFAwIySR72TzSbb91N0KJq24eCt8Xi0IioP72/1R3ZXlqi/2HH0u5Ewf6JbgLycU
+r9APAtCnucSDYz3mLkW6y+9MQZZFIOF7YvFvtRL9J7Fo3e9X79Vo5IlBQXtrOcup
+ycnIExXui4Eo0ru+J1PNbCicAHBsDwE1VJiyrBCGAGy8ULgbLTkqn8ZAeLpaREyv
+i6P6s/F+KpczxzF1pivQMgaFgb9bJbKZi/o1ATgLEzFXpvEIIJ5VJ6fyncNzYGQ=
+=mFyz
 -----END PGP SIGNATURE-----
