@@ -22,6 +22,15 @@
 
 2014-07-13  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>
 
+        * Version 0.9999999952 released.
+
+        * Fixed Berkeley DB install.
+
+        * New version of Term::Menus paired with this release.
+
+
+2014-07-13  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>
+
         * Version 0.9999999951 released.
 
         * New version of Term::Menus paired with this release.
